# system76-power-autoswitch

./: Cargo.toml  changelog
.github/workflows/: rust.yml
data/: cloud-power.service
debian/: service
src/: main.rs
