[package]
name = "system76-power-autoswitch"
description = "daemon that enable autoswitch between performance when on AC and bettery otherwise with system76-power utility"
license = "GNU GPLV3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
system76-power = { git = "https://github.com/pop-os/system76-power" }
zbus = "2.3.2"
upower_dbus = "0.2.0"
futures = "0.3.24"

[package.metadata.deb]
maintainer = "cloud <sylvain.maret@hotmail.fr>"
copyright = "2024, cloud"
license-file = ["LICENSE", "0"]
extended-description = "daemon that trigger system76-power autoswitch"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/system76-power-autoswitch", "usr/bin/", "755"],
]
changelog = "changelog"
default-features = false
maintainer-scripts = "debian/"
systemd-units = { enable = true }
